--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                             </a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link selected" href="#">
+                            <a class="nav__link" href="#">
                                 Join now
                             </a>
                         </li>
@@ -114,32 +114,46 @@
                     </ul>
                 </nav>
 
-                <section class="main__support">
-                    <div class="support__inner">
-                        <h1 class="support__title title">
-                            Join Now
+                <section class="main__about about">
+                    <div class="about__inner">
+                        <h1 class="about__title title">
+                            About Us
                         </h1>
-                        <p class="support__attention">
-                            <strong>* Important! Achtung! L'attention! 注意!</strong>
-                        </p>
-                        <p class="support__text">
-                            Passwords for PayPal accounts will be activated during <strong>48 hours</strong> . You will
-                            receive personal password on e-mail which you filled in PayPal form. Your membership starts
-                            from the moment of password sending.
-                        </p>
-                        <div class="support__columns">
-                            <p class="support__column">
-                                PAY WITH <br> <strong>PAYPAL</strong> FOR:
+                        <div class="about__texts">
+                            <p class="about__par">
+                                Family of Flexshow. com sites is non-adult and available for any age group.
                             </p>
-                            <p class="support__column">
-                                <strong>One month</strong> <br>
-                                $29.95
+                            <p class="about__par">
+                                Flexshow. com is dedicated to propagate wonderful abilities of human body, <br> it’s
+                                suppleness, flexibility, fitness.
                             </p>
-                            <div class="support__column">
-                                <a class="support__column-link" href="#">
-                                    <img class="support__img" src="images/main/support/main.gif" alt="">
-                                </a>
-                            </div>
+                            <p class="about__par">
+                                Access fee allows support of our models, helps to continue their careers in sport,
+                                choreography and yoga
+                            </p>
+                            <p class="about__par">
+                                All of us are grateful for your support
+                            </p>
+                        </div>
+                        <h2 class="about__subtitle">
+                            Do you want to be a model?
+                        </h2>
+                        <div class="about__texts">
+                            <p class="about__par">
+                                Do you like our site?
+                            </p>
+                            <p class="about__par">
+                                Have you achieved progress I development of you flexibility?
+                            </p>
+                            <p class="about__par">
+                                Do you want to share your success?
+                            </p>
+                            <p class="about__par">
+                                Please contact us and we will discuss terms of the photo/video session.
+                            </p>
+                            <a class="about__par link" href="#">
+                                Articles
+                            </a>
                         </div>
                     </div>
                 </section>
