--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                             </a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link selected" href="#">
+                            <a class="nav__link" href="#">
                                 Join now
                             </a>
                         </li>
@@ -114,33 +114,14 @@
                     </ul>
                 </nav>
 
-                <section class="main__support">
-                    <div class="support__inner">
-                        <h1 class="support__title title">
-                            Join Now
+                <section class="main__contact contact">
+                    <div class="contact__inner">
+                        <h1 class="contact__title title">
+                            Contact Us
                         </h1>
-                        <p class="support__attention">
-                            <strong>* Important! Achtung! L'attention! 注意!</strong>
+                        <p class="contact__text">
+                            Regarding all support requests related this site, please email <a class="link" href="#">support@flexshow.com</a>
                         </p>
-                        <p class="support__text">
-                            Passwords for PayPal accounts will be activated during <strong>48 hours</strong> . You will
-                            receive personal password on e-mail which you filled in PayPal form. Your membership starts
-                            from the moment of password sending.
-                        </p>
-                        <div class="support__columns">
-                            <p class="support__column">
-                                PAY WITH <br> <strong>PAYPAL</strong> FOR:
-                            </p>
-                            <p class="support__column">
-                                <strong>One month</strong> <br>
-                                $29.95
-                            </p>
-                            <div class="support__column">
-                                <a class="support__column-link" href="#">
-                                    <img class="support__img" src="images/main/support/main.gif" alt="">
-                                </a>
-                            </div>
-                        </div>
                     </div>
                 </section>
             </div>
