--- a/customer.html
+++ b/customer.html
@@ -83,66 +83,70 @@
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                Home
+                                Flexshow
                             </a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                Members Login
-                            </a>
-                        </li>
-                        <li class="nav__item">
-                            <a class="nav__link selected" href="#">
-                                Join now
+                                flexshow-media
                             </a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                Preview
+                                flexshow-ballet
                             </a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                Links
-                            </a>
-                        </li>
-                        <li class="nav__item">
-                            <a class="nav__link" href="#">
-                                Support
+                                flexshow-archive
                             </a>
                         </li>
                     </ul>
                 </nav>
 
-                <section class="main__support">
-                    <div class="support__inner">
-                        <h1 class="support__title title">
-                            Join Now
+                <section class="main__customer customer">
+                    <div class="customer__inner">
+                        <h1 class="customer__title title">
+                            Customer service
                         </h1>
-                        <p class="support__attention">
-                            <strong>* Important! Achtung! L'attention! 注意!</strong>
-                        </p>
-                        <p class="support__text">
-                            Passwords for PayPal accounts will be activated during <strong>48 hours</strong> . You will
-                            receive personal password on e-mail which you filled in PayPal form. Your membership starts
-                            from the moment of password sending.
-                        </p>
-                        <div class="support__columns">
-                            <p class="support__column">
-                                PAY WITH <br> <strong>PAYPAL</strong> FOR:
-                            </p>
-                            <p class="support__column">
-                                <strong>One month</strong> <br>
-                                $29.95
-                            </p>
-                            <div class="support__column">
-                                <a class="support__column-link" href="#">
-                                    <img class="support__img" src="images/main/support/main.gif" alt="">
-                                </a>
-                            </div>
-                        </div>
+                        <ul class="customer__list">
+                            <li class="customer__item">
+                                All sites flexshow.com
+                            </li>
+                            <li class="customer__item">
+                                flexshow-media.com
+                            </li>
+                            <li class="customer__item">
+                                flexshow-ballet.com
+                            </li>
+                            <li class="customer__item">
+                                flexshow-archive.com
+                            </li>
+                            <li class="customer__item">
+                                are now in one Site. We need a bit time time to fill them.
+                            </li>
+                            <li class="customer__item">
+                                You will see the very best of past Images and Videos.
+                            </li>
+                            <li class="customer__item">
+                                We constantly updated the site with new and exclusive photo sets and videos.
+                            </li>
+                        </ul>
+                        <form class="customer__form">
+                            <label class="customer__label">
+                                <span class="customer__label-text">
+                                    If you want to be aware of all events on our resource, subscribe to newsletter by
+                                    e-mail:
+                                </span>
+                                <input class="customer__label-input" type="text" name="signup-email" id="signup-email">
+                                <button class="customer__label-btn" type="submit">
+                                    Sign up!
+                                </button>
+                            </label>
+                        </form>
                     </div>
                 </section>
+
             </div>
         </div>
     </main>
