--- a/links.html
+++ b/links.html
@@ -116,11 +116,11 @@
 
                 <section class="main__members members">
                     <div class="members__inner">
-                        <h1 class="members__title">
+                        <h1 class="members__title title">
                             Links
                         </h1>
                         <div class="members__link-wrapper">
-                            <a class="members__link" href="#">
+                            <a class="members__link link" href="#">
                                 Articles about Contortion (Contorsion)
                             </a>!
                         </div>
