--- a/support.html
+++ b/support.html
@@ -116,7 +116,7 @@
 
                 <section class="main__members members">
                     <div class="members__inner">
-                        <h1 class="members__title">
+                        <h1 class="members__title title">
                             Support
                         </h1>
                         <div class="members__link-wrapper">
