--- a/conditions.html
+++ b/conditions.html
@@ -83,64 +83,97 @@
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                Home
+                                Flexshow
                             </a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                Members Login
-                            </a>
-                        </li>
-                        <li class="nav__item">
-                            <a class="nav__link selected" href="#">
-                                Join now
+                                flexshow-media
                             </a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                Preview
+                                flexshow-ballet
                             </a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                Links
-                            </a>
-                        </li>
-                        <li class="nav__item">
-                            <a class="nav__link" href="#">
-                                Support
+                                flexshow-archive
                             </a>
                         </li>
                     </ul>
                 </nav>
 
-                <section class="main__support">
-                    <div class="support__inner">
-                        <h1 class="support__title title">
-                            Join Now
+                <section class="main__conditions conditions">
+                    <div class="conditions__inner">
+                        <h1 class="conditions__title title">
+                            Terms and conditions
                         </h1>
-                        <p class="support__attention">
-                            <strong>* Important! Achtung! L'attention! 注意!</strong>
+                        <p class="conditions__text">
+                            Flexshow. com, Flexshow-media.com, Flexshow-archive.com, Flexshow-ballet.com — aka
+                            Flexshow.com are the sole owners of materials published on all listed contortion sites or
+                            marked with Flexshow logo.
                         </p>
-                        <p class="support__text">
-                            Passwords for PayPal accounts will be activated during <strong>48 hours</strong> . You will
-                            receive personal password on e-mail which you filled in PayPal form. Your membership starts
-                            from the moment of password sending.
+                        <p class="conditions__text">
+                            We do not oppose if you publish just a few photos and a single video on sites with common
+                            access. But we strongly discourage to publish entire contortion photosets or several
+                            contortion videos.
                         </p>
-                        <div class="support__columns">
-                            <p class="support__column">
-                                PAY WITH <br> <strong>PAYPAL</strong> FOR:
-                            </p>
-                            <p class="support__column">
-                                <strong>One month</strong> <br>
-                                $29.95
-                            </p>
-                            <div class="support__column">
-                                <a class="support__column-link" href="#">
-                                    <img class="support__img" src="images/main/support/main.gif" alt="">
-                                </a>
-                            </div>
-                        </div>
+                        <p class="conditions__text">
+                            In that case your membership may be terminated without notice and refund.
+                        </p>
+                        <p class="conditions__text">
+                            These terms are subject to change without notification.
+                        </p>
+                        <p class="conditions__text">
+                            In addition, Flexshow.com reserves the right to terminate any membership account at any time
+                            for any reason.
+                        </p>
+                        <dl class="conditions__list">
+                            <dd class="conditions__term">
+                                1. Age and Legal Right to Access
+                            </dd>
+                            <dt class="conditions__definition">
+                                Flexshow.com non-adult contortion website, contains only legal contortion materials for
+                                all ages.
+                                If an access was purchased via your credit card we are not responsible if it was done
+                                without your permission.
+                            </dt>
+                            <dd class="conditions__term">
+                                2. Personal Use of contortion Content
+                            </dd>
+                            <dt class="conditions__definition">
+                                Flexshow.com places contortion content on this site for viewers’ personal and
+                                non-commercial use only. Subscribers agree to be bound by copyright laws, and our
+                                Copyright Notice, above.
+                            </dt>
+                            <dd class="conditions__term">
+                                3. Password Sharing
+                            </dd>
+                            <dt class="conditions__definition">
+                                Password sharing is prohibited. Subscribers agree not to share, publish, post to another
+                                website or otherwise allow access to their username and/or password to any other
+                                individual or party. Shared passwords will be detected and disabled immediately.
+                                Password abusers will be reported to our credit card processing company.
+                            </dt>
+                            <dd class="conditions__term">
+                                4. Download Limits
+                            </dd>
+                            <dt class="conditions__definition">
+                                There is a download limit on contortion video files (*.wmv, *.mp4) of 2 GB/day. We
+                                believe that the download limits will not affect normal, legitimate members using the
+                                site for its intended purpose: personal, private entertainment and non-commercial use
+                                only.
+                            </dt>
+                            <dd class="conditions__term">
+                                5. Other Terms
+                            </dd>
+                            <dt class="conditions__definition">
+                                Other terms, whose violation will result in termination of your membership, include, but
+                                are not limited to, credit card fraud, and any activity that is deemed detrimental to
+                                the experience of other users.
+                            </dt>
+                        </dl>
                     </div>
                 </section>
             </div>
