--- a/members.html
+++ b/members.html
@@ -106,7 +106,7 @@
 
                 <section class="main__members members">
                     <div class="members__inner">
-                        <h1 class="members__title">
+                        <h1 class="members__title title">
                             Welcome to the members section!
                         </h1>
                         <p class="members__text">
